--- a/KgysProjectIdentity.Web/KgysProjectIdentity.Web.csproj
+++ b/KgysProjectIdentity.Web/KgysProjectIdentity.Web.csproj
@@ -37,6 +37,7 @@
     <PackageReference Include="ClosedXML" Version="0.102.2" />
     <PackageReference Include="EPPlus" Version="7.0.9" />
     <PackageReference Include="GridMvcCore" Version="6.0.4" />
+    <PackageReference Include="Microsoft.AspNet.Providers.Core" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Razor" Version="2.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.8">
       <PrivateAssets>all</PrivateAssets>
