--- a/KgysProjectIdentity.Web/appsettings.json
+++ b/KgysProjectIdentity.Web/appsettings.json
@@ -5,8 +5,8 @@
     "Email": "projectidentity35bth@gmail.com"
   },
   "ConnectionStrings": {
-    //"SqlCon": "Data Source=MONSTER1983\\SQLEXPRESS;Initial Catalog=KgysProjectIdentityDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;MultipleActiveResultSets=true"
-    "SqlCon": "Data Source=10.135.0.150, 1433;User ID=KgysProjectIdentity;Password=349103*Kgys*347347;Initial Catalog=KgysProjectIdentity;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;MultipleActiveResultSets=true"
+    "SqlCon": "Data Source=MONSTER1983\\SQLEXPRESS;Initial Catalog=KgysProjectIdentity;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;MultipleActiveResultSets=true"
+    //"SqlCon": "Data Source=10.135.0.150, 1433;User ID=KgysProjectIdentity;Password=349103*Kgys*347347;Initial Catalog=KgysProjectIdentity;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;MultipleActiveResultSets=true"
   },
 
   "Logging": {
